convert to mask the overlay

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,1 +1,1 @@
-Plugins>Segmentation, "Osteoclasts", org.osteo.ij.plugin.Osteoclasts_
+Plugins>Osteoclasts, "Counting", org.osteo.ij.plugin.Osteoclasts_
