stack overlays add AbstractOsteoclasts to prevent wrong use of some fields (e.g. stackOverlays) add classifier method and dependencies (weka + trainable segmentation for fiji)

--- a/pom.xml
+++ b/pom.xml
@@ -1,75 +1,89 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.osteo.ij.plugin</groupId>
-  <artifactId>OsteoPlugin</artifactId>
-  <version>beta</version>
-  <packaging>jar</packaging>
+    <groupId>org.osteo.ij.plugin</groupId>
+    <artifactId>OsteoPlugin</artifactId>
+    <version>beta</version>
+    <packaging>jar</packaging>
 
-  <name>OsteoPlugin</name>
-  <url>http://maven.apache.org</url>
+    <name>OsteoPlugin</name>
+    <url>http://maven.apache.org</url>
   
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <imagej.path>/home/davd33/Downloads/ImageJ</imagej.path>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <imagej.path>/home/bioinf/davidr/Downloads/ImageJ</imagej.path>
+    </properties>
   
-  <build>
-      <finalName>${project.artifactId}_${project.version}</finalName>
-      <plugins>
-          <plugin>
-              <groupId>org.codehaus.mojo</groupId>
-              <artifactId>exec-maven-plugin</artifactId>
-              <version>1.2</version>
-              <executions>
-                  <execution>
-                      <goals>
-                          <goal>exec</goal>
-                      </goals>
-                  </execution>
-              </executions>
-              <configuration>
-                  <executable>java</executable>
-                  <commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/ij.jar"    </commandlineArgs>
-                  <workingDirectory>${imagej.path}</workingDirectory>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-antrun-plugin</artifactId>
-              <executions>
-                  <execution>
-                      <id>copytoplugins</id>
-                      <phase>install</phase>
-                      <goals>
-                          <goal>run</goal>
-                      </goals>
-                      <configuration>
-                          <tasks>
-                              <copy 
-                                  todir="${imagej.path}/plugins/" 
-                                  file="target/${project.build.finalName}.jar"/>
-                          </tasks>
-                      </configuration>
-                  </execution>
-              </executions>
-          </plugin>
-      </plugins>
-  </build>
+    <build>
+        <finalName>${project.artifactId}_${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>java</executable>
+                    <commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/ij.jar"    </commandlineArgs>
+                    <workingDirectory>${imagej.path}</workingDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copytoplugins</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <copy 
+                                    todir="${imagej.path}/plugins/" 
+                                    file="target/${project.build.finalName}.jar"/>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>gov.nih.imagej</groupId>
-        <artifactId>imagej</artifactId>
-        <version>1.47</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>gov.nih.imagej</groupId>
+            <artifactId>imagej</artifactId>
+            <version>1.47</version>
+        </dependency>
+        <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>Trainable_Segmentation</artifactId>
+            <version>2.0</version>
+            <scope>system</scope>
+            <systemPath>/home/bioinf/davidr/Downloads/osteo/jars/Trainable_Segmentation.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>weka</groupId>
+            <artifactId>weka</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>/home/bioinf/davidr/Downloads/osteo/jars/weka.jar</systemPath>
+        </dependency>
+    </dependencies>
 </project>
