--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <imagej.path>/home/bioinf/davidr/Downloads/ImageJ</imagej.path>
-        <!--<imagej.path>/home/bioinf/davidr/Downloads/Fiji.app</imagej.path>-->
+        <!--<imagej.path>/home/bioinf/davidr/Downloads/ImageJ</imagej.path>-->
+        <imagej.path>/home/bioinf/davidr/Downloads/Fiji.app</imagej.path>
         <old_osteo_dir>/home/bioinf/davidr/Downloads/osteo/jars</old_osteo_dir>
     </properties>
   
@@ -34,8 +34,8 @@
                 </executions>
                 <configuration>
                     <executable>java</executable>
-                    <commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/ij.jar"    </commandlineArgs>
-                    <!--<commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/jars/ij-1.47u.jar"    </commandlineArgs>-->
+                    <!--<commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/ij.jar"    </commandlineArgs>-->
+                    <commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/jars/ij-1.48a.jar"    </commandlineArgs>
                     <workingDirectory>${imagej.path}</workingDirectory>
                 </configuration>
             </plugin>
