--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!--<imagej.path>/home/bioinf/davidr/Downloads/ImageJ</imagej.path>-->
-        <imagej.path>/home/bioinf/davidr/Downloads/Fiji.app</imagej.path>
-        <old_osteo_dir>/home/bioinf/davidr/Downloads/osteo/jars</old_osteo_dir>
+        <imagej.path>C:\Users\davd\Documents\Fiji.app</imagej.path>
     </properties>
   
     <build>
@@ -34,8 +32,7 @@
                 </executions>
                 <configuration>
                     <executable>java</executable>
-                    <!--<commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/ij.jar"    </commandlineArgs>-->
-                    <commandlineArgs>-jar     -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}/jars/ij-1.48a.jar"    </commandlineArgs>
+                    <commandlineArgs>-jar -Xmx2g -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address} "${imagej.path}\jars\ij-1.48b.jar"</commandlineArgs>
                     <workingDirectory>${imagej.path}</workingDirectory>
                 </configuration>
             </plugin>
@@ -75,14 +72,14 @@
             <version>1.47</version>
         </dependency>
         <dependency>
+            <groupId>sc.fiji</groupId>
+            <artifactId>Trainable_Segmentation</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>nz.ac.waikato.cms.weka</groupId>
             <artifactId>weka-dev</artifactId>
             <version>3.7.9</version>
-        </dependency>
-        <dependency>
-            <groupId>aws</groupId>
-            <artifactId>aws.old</artifactId>
-            <version>1</version>
         </dependency>
     </dependencies>
 </project>
